--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.18",
     "axios": "^1.6.8",
     "mercadopago": "^2.0.8",
     "next": "14.1.4",
